--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -21,7 +21,7 @@
           <li class="has-submenu">
             <a href="#">교회소개</a>
             <ul class="submenu">
-              <li><a href="#">인사말</a></li>
+              <li><a href="/greetings.html">인사말</a></li>
               <li><a href="#">비전</a></li>
               <li><a href="#">섬기는 사람들</a></li>
             </ul>
