--- a/main/templates/main/greetings.html
+++ b/main/templates/main/greetings.html
@@ -15,10 +15,39 @@
       </div>
       <nav class="main-nav">
         <ul>
-          <li><a href="#">교회소개</a></li>
-          <li><a href="#">교회소식</a></li>
-          <li><a href="#">부서별</a></li>
-          <li><a href="#">예배</a></li>
+          <li class="has-submenu">
+            <a href="#">교회소개</a>
+            <ul class="submenu">
+              <li><a href="/greetings.html">인사말</a></li>
+              <li><a href="#">비전</a></li>
+              <li><a href="#">섬기는 사람들</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">교회소식</a>
+            <ul class="submenu">
+              <li><a href="/notice.html">공지사항</a></li>
+              <li><a href="#">주보</a></li>
+              <li><a href="#">새가족</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">부서별</a>
+            <ul class="submenu">
+              <li><a href="#">아동부</a></li>
+              <li><a href="#">청소년부</a></li>
+              <li><a href="#">청년부</a></li>
+              <li><a href="#">장년부</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">예배</a>
+            <ul class="submenu">
+              <li><a href="#">주일예배</a></li>
+              <li><a href="#">수요예배</a></li>
+              <li><a href="#">새벽기도회</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <div class="user-menu"></div>
