--- a/main/templates/main/mypage.html
+++ b/main/templates/main/mypage.html
@@ -91,7 +91,7 @@
           <li class="has-submenu">
             <a href="#">교회소식</a>
             <ul class="submenu">
-              <li><a href="#">공지사항</a></li>
+              <li><a href="/notice.html">공지사항</a></li>
               <li><a href="#">주보</a></li>
               <li><a href="#">새가족</a></li>
             </ul>
